Use Value editor to change mode

--- a/OzricUI/Components/ModeSwitchDialog.razor
+++ b/OzricUI/Components/ModeSwitchDialog.razor
@@ -46,7 +46,7 @@
                     </RowTemplate>
                     <RowEditingTemplate>
                         <MudTd DataLabel="Mode">
-                            <MudTextField @bind-Value="@context.mode" Required />
+                            <ValueEditorComponent Value="@context.mode" OnEdited="v => context.mode = (Mode) v"/>
                         </MudTd>
                         @foreach (var key in Node.GetKeys())
                         {
